integration with initial version of account system - not yet working

--- a/service/templates/header.html
+++ b/service/templates/header.html
@@ -12,7 +12,13 @@
         </div>
         
     </div>
-    <div class="container" style="background-color: white;">
-        {% include "_flash.html" %}
+
+    <div class="content">
+        <div class="row">
+            <div class="col-md-12">
+                {% include "_flash.html" %}
+            </div>
+        </div>
     </div>
+
 </div>
