prep for account module

--- a/service/templates/header.html
+++ b/service/templates/header.html
@@ -3,12 +3,19 @@
     <div class="content" id="navigation">
 
         <div class="navbar-nav" id="main-nav">
-                <a class="navbar-brand" href="/">How Open Is It: Open Access Spectrum</a>
-                <ul class="nav navbar-nav" id="main-nav-admin-menu" style="margin-bottom: 10px">
-                    <li><a href="/faq">FAQ</a></li>
-                    <li><a href="/sponsors">Sponsors/Supporters</a></li>
-                    <li><a href="/resources">Related Resources</a></li>
+            <a class="navbar-brand" href="/">How Open Is It: Open Access Spectrum</a>
+            <ul class="nav navbar-nav" id="main-nav-admin-menu" style="margin-bottom: 10px">
+                <li><a href="/faq">FAQ</a></li>
+                <li><a href="/sponsors">Sponsors/Supporters</a></li>
+                <li><a href="/resources">Related Resources</a></li>
+            </ul>
+
+            {% if not current_user.is_anonymous() %}
+                <ul class="nav pull-right">
+                    <li{% if request.path.startswith('/account') %} class="active"{% endif %}><a alt="View your account" title="View your account" href="{{ url_for('account.username', username=current_user.email) }}"><strong>{{current_user.email}}</strong></a></li>
+                    <li><a href="{{ url_for('account.logout') }}">Logout</a></li>
                 </ul>
+            {% endif %}
         </div>
         
     </div>
