--- a/service/templates/score.html
+++ b/service/templates/score.html
@@ -2,7 +2,244 @@
 
 {% block content %}
 
-{{score.id}}
+
+
+<div class="row">
+    <div class="col-md-1 total-score-box">
+        <span class="total-score score-above-{{score.nearest_ten}}">{{score.total}}</span><br>
+        Total Score
+    </div>
+    <div class="col-md-8">
+        <h1>{{score.journal_name}}</h1>
+
+        {% if score.issn|length > 0 or score.eissn|length > 0 %}
+        <em>
+            {% if score.issn|length > 0 %}
+                {{score.issn|join(", ")}} (Print)
+            {% endif %}
+            {% if score.eissn|length > 0 %}
+                {% if score.issn|length > 0 %}
+                    ;
+                {% endif %}
+                {{score.eissn|join(", ")}} (Online)
+            {% endif %}
+        </em><br>
+        {% endif %}
+
+        {% if score.publisher %}
+        {{score.publisher}}<br>
+        {% endif %}
+
+        APC <span class="apc">{{score.apc}}</span>
+    </div>
+    <div class="col-md-3">
+        <div style="padding-top: 25px">
+            {% if score.journal_url %}
+            <a href="{{score.journal_url}}">Journal Homepage</a><br>
+            {% endif %}
+
+            {% if score.funder_policy_url %}
+            <a href="{{score.funder_policy_url}}">Funder Policy</a><br>
+            {% endif %}
+
+            {% if score.romeo_url %}
+            <a href="{{score.romeo_url}}">Sherpa Romeo</a><br>
+            {% endif %}
+        </div>
+    </div>
+</div>
+
+<table class="score-table">
+    <thead>
+        <tr>
+            <td class="access access-left">ACCESS</td>
+            <td>READER RIGHTS</td>
+            <td>REUSE RIGHTS</td>
+            <td>COPYRIGHTS</td>
+            <td>AUTHOR POSTING RIGHTS</td>
+            <td>AUTOMATIC POSTING</td>
+            <td>MACHINE READABILITY</td>
+            <td class="access access-right">ACCESS</td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr class="band-5">
+            <td><img src="{{url_for('static', filename='images/openaccess.png')}}"></td>
+            <td{% if score.reader_rights_band == 5 %} class="selected"{% endif %}>
+                5
+            </td>
+            <td{% if score.reuse_rights_band == 5 %} class="selected"{% endif %}>
+                5
+            </td>
+            <td{% if score.copyrights_band == 5 %} class="selected"{% endif %}>
+                5
+            </td>
+            <td{% if score.author_posting_rights_band == 5 %} class="selected"{% endif %}>
+                5
+            </td>
+            <td{% if score.automatic_posting_rights_band == 5 %} class="selected"{% endif %}>
+                5
+            </td>
+            <td{% if score.machine_readability_band == 5 %} class="selected"{% endif %}>
+                5
+            </td>
+            <td><img src="{{url_for('static', filename='images/openaccess.png')}}"></td>
+        </tr>
+        <tr class="band-4">
+            <td>&nbsp;</td>
+            <td{% if score.reader_rights_band == 4 %} class="selected"{% endif %}>
+                4
+            </td>
+            <td{% if score.reuse_rights_band == 4 %} class="selected"{% endif %}>
+                4
+            </td>
+            <td{% if score.copyrights_band == 4 %} class="selected"{% endif %}>
+                4
+            </td>
+            <td{% if score.author_posting_rights_band == 4 %} class="selected"{% endif %}>
+                4
+            </td>
+            <td{% if score.automatic_posting_rights_band == 4 %} class="selected"{% endif %}>
+                4
+            </td>
+            <td{% if score.machine_readability_band == 4 %} class="selected"{% endif %}>
+                4
+            </td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr class="band-3">
+            <td>&nbsp;</td>
+            <td{% if score.reader_rights_band == 3 %} class="selected"{% endif %}>
+                3
+            </td>
+            <td{% if score.reuse_rights_band == 3 %} class="selected"{% endif %}>
+                3
+            </td>
+            <td{% if score.copyrights_band == 3 %} class="selected"{% endif %}>
+                3
+            </td>
+            <td{% if score.author_posting_rights_band == 3 %} class="selected"{% endif %}>
+                3
+            </td>
+            <td{% if score.automatic_posting_rights_band == 3 %} class="selected"{% endif %}>
+                3
+            </td>
+            <td{% if score.machine_readability_band == 3 %} class="selected"{% endif %}>
+                3
+            </td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr class="band-2">
+            <td>&nbsp;</td>
+            <td{% if score.reader_rights_band == 2 %} class="selected"{% endif %}>
+                2
+            </td>
+            <td{% if score.reuse_rights_band == 2 %} class="selected"{% endif %}>
+                2
+            </td>
+            <td{% if score.copyrights_band == 2 %} class="selected"{% endif %}>
+                2
+            </td>
+            <td{% if score.author_posting_rights_band == 2 %} class="selected"{% endif %}>
+                2
+            </td>
+            <td{% if score.automatic_posting_rights_band == 2 %} class="selected"{% endif %}>
+                2
+            </td>
+            <td{% if score.machine_readability_band == 2 %} class="selected"{% endif %}>
+                2
+            </td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr class="band-1">
+            <td><img src="{{url_for('static', filename='images/closedaccess.png')}}"></td>
+            <td{% if score.reader_rights_band == 1 %} class="selected"{% endif %}>
+                1
+            </td>
+            <td{% if score.reuse_rights_band == 1 %} class="selected"{% endif %}>
+                1
+            </td>
+            <td{% if score.copyrights_band == 1 %} class="selected"{% endif %}>
+                1
+            </td>
+            <td{% if score.author_posting_rights_band == 1 %} class="selected"{% endif %}>
+                1
+            </td>
+            <td{% if score.automatic_posting_rights_band == 1 %} class="selected"{% endif %}>
+                1
+            </td>
+            <td{% if score.machine_readability_band == 1 %} class="selected"{% endif %}>
+                1
+            </td>
+            <td><img src="{{url_for('static', filename='images/closedaccess.png')}}"></td>
+        </tr>
+    </tbody>
+</table>
+
+<h2>Score Details</h2>
+
+<table class="score-details">
+    <thead>
+        <tr>
+            <td>Area</td>
+            <td>Score</td>
+            <td>URL</td>
+            <td>Relevant Text</td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td><strong>Reader Rights</strong></td>
+            <td>{{score.reader_rights_score}}</td>
+            <td><a href="{{score.reader_rights_url}}">URL</a></td>
+            <td>{{score.reader_rights_relevant_text}}</td>
+        </tr>
+        <tr>
+            <td><strong>Reuse Rights</strong></td>
+            <td>{{score.reuse_rights_score}}</td>
+            <td><a href="{{score.reuse_rights_url}}">URL</a></td>
+            <td>{{score.reuse_rights_relevant_text}}</td>
+        </tr>
+        <tr>
+            <td><strong>Copyights</strong></td>
+            <td>{{score.copyrights_score}}</td>
+            <td><a href="{{score.copyrights_url}}">URL</a></td>
+            <td>{{score.copyrights_relevant_text}}</td>
+        </tr>
+        <tr>
+            <td><strong>Author Posting Rights</strong></td>
+            <td>{{score.author_posting_rights_score}}</td>
+            <td><a href="{{score.author_posting_rights_url}}">URL</a></td>
+            <td>{{score.author_posting_rights_relevant_text}}</td>
+        </tr>
+        <tr>
+            <td><strong>Automatic Posting</strong></td>
+            <td>{{score.automatic_posting_rights_score}}</td>
+            <td><a href="{{score.automatic_posting_rights_url}}">URL</a></td>
+            <td>{{score.automatic_posting_rights_relevant_text}}</td>
+        </tr>
+        <tr>
+            <td><strong>Machine Readability</strong></td>
+            <td>{{score.machine_readability_score}}</td>
+            <td><a href="{{score.machine_readability_url}}">URL</a></td>
+            <td>{{score.machine_readability_relevant_text}}</td>
+        </tr>
+    </tbody>
+</table>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="pull-right">
+            {% if score.publisher_contact_date %}
+            <em>Publisher last contacted about score {{score.format_publisher_contact_date()}}</em><br>
+            {% endif %}
+
+            {% if score.last_upload_date %}
+            <em>Score last updated {{score.format_last_upload_date()}}</em>
+            {% endif %}
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 
