layout tweaks to the search interface, plus add new sorting and free-text limiting options, and change labels on range filters

--- a/service/static/css/service.css
+++ b/service/static/css/service.css
@@ -42,55 +42,47 @@
 }
 
 .score-above-0 {
-    color: #d20700;
+    color: #988E93;
 }
 
 .score-above-10 {
-    color: #d20700;
+    color: #988E93;
 }
 
 .score-above-20 {
-    color: #d20700;
+    color: #988E93;
 }
 
 .score-above-30 {
-    color: #d20700;
+    color: #988E93;
 }
 
 .score-above-40 {
-    color: #d20700;
+    color: #988E93;
 }
 
 .score-above-50 {
-    color: #e9e103;
+    color: #988E93;
 }
 
 .score-above-60 {
-    color: #e9e103;
+    color: #988E93;
 }
 
 .score-above-70 {
-    color: #e9e103;
+    color: #988E93;
 }
 
 .score-above-80 {
-    color: #e9e103;
+    color: #988E93;
 }
 
 .score-above-90 {
-    color: #06e000;
+    color: #988E93;
 }
 
 .score-above-100 {
-    color: #06e000;
-}
-
-.score-above-110 {
-    color: #06e000;
-}
-
-.score-above-120 {
-    color: #06e000;
+    color: #988E93;
 }
 
 .facetview_filters {
