--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
+<p style="margin-bottom: 30px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dapibus mauris in semper
+    dictum. Mauris iaculis eros nisi, sollicitudin venenatis elit ultricies eget. Fusce rhoncus purus rutrum volutpat
+    mollis. Quisque luctus porta eros ac tincidunt. Proin nec cursus velit, eget venenatis velit. Pellentesque venenatis
+    rhoncus imperdiet. Quisque bibendum dictum nulla, non dapibus lacus egestas sed. Nullam condimentum massa ac tellus
+    tristique varius. Maecenas quis lorem libero. Donec at dolor nec ante luctus hendrerit. Fusce interdum risus ante,
+    nec vestibulum enim consectetur sit amet</p>
 
 <div id="publicsearch"></div>
 
