--- a/service/templates/footer.html
+++ b/service/templates/footer.html
@@ -3,7 +3,7 @@
         <div class="col-md-12" style="padding-bottom: 100px">
             <div style="width: 100%; border-top: 1px solid #000000"></div>
             <div class="pull-right" id="copyright">
-                &copy; 2015 SPARC and PLOS, licensed under CC BY
+                &copy; 2015 SPARC, licensed under CC BY
             </div>
         </div>
     </div>
