--- a/service/static/css/service.css
+++ b/service/static/css/service.css
@@ -85,13 +85,13 @@
     color: #988E93;
 }
 
-.facetview_filters {
+#publicsearch .facetview_filters {
     border-left: 3px solid #c7d9e2;
     padding-left: 10px;
     margin-bottom: 15px;
 }
 
-#facetview_selectedfilters {
+#publicsearch #facetview_selectedfilters {
     margin: 10px;
     padding: 10px;
     border-radius: 5px;
@@ -101,7 +101,7 @@
     background-color: #c7d9e2;
 }
 
-.facetview_not_found {
+#publicsearch .facetview_not_found {
     margin: 20px;
     font-weight: bold;
     color: #ff0700;
