--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 
-<p style="margin-bottom: 30px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dapibus mauris in semper
-    dictum. Mauris iaculis eros nisi, sollicitudin venenatis elit ultricies eget. Fusce rhoncus purus rutrum volutpat
-    mollis. Quisque luctus porta eros ac tincidunt. Proin nec cursus velit, eget venenatis velit. Pellentesque venenatis
-    rhoncus imperdiet. Quisque bibendum dictum nulla, non dapibus lacus egestas sed. Nullam condimentum massa ac tellus
-    tristique varius. Maecenas quis lorem libero. Donec at dolor nec ante luctus hendrerit. Fusce interdum risus ante,
-    nec vestibulum enim consectetur sit amet</p>
+<p style="margin-bottom: 30px">The Open Access Spectrum (OAS) Evaluation Tool quantitatively scores journals' degrees of
+    openness.  This independent measure can be of crucial benefit to authors, libraries, research funders, government
+    agencies, and other interested parties.  It offers a concrete, quantifiable mechanism to analyze publications'
+    policies.  The OAS Evaluation Tool aims to provide unprecedented insight and transparency into scholarly journals'
+    degree of openness.</p>
 
 <div id="publicsearch"></div>
 
