--- a/service/templates/meta.html
+++ b/service/templates/meta.html
@@ -1,3 +1,3 @@
-<title>How Open Is It: Open Access Spectrum</title>
-<meta name="description" content="How Open Is It: Open Access Spectrum">
+<title>Open Access Spectrum Evaluation Tool</title>
+<meta name="description" content="Open Access Spectrum Evaluation Tool">
 <meta name="author" content="PLOS, SPARC, Cottage Labs">
