--- a/service/templates/admin/admin.html
+++ b/service/templates/admin/admin.html
@@ -8,14 +8,14 @@
 <p>Use the form below to upload a CSV with scores to be added/updated/removed.<p>
 
 <div style="margin-top: 50px; margin-bottom: 50px">
-<form action="{{url_for('admin.index')}}" method="post" enctype="multipart/form-data">
+<form action="{{url_for('admin.index')}}" method="post" enctype="multipart/form-data" id="upload-form">
     <div class="row">
         <div class="col-md-offset-2 col-md-8 form-inline">
             <div class="form-group">
                 <label for="csv">Choose a CSV to upload</label>
                 <input type="file" name="csv" id="csv" class="form-control">
             </div>
-            <button type="submit" class="btn btn-success">Upload <i class="glyphicon glyphicon-upload"></i></button>
+            <button type="submit" class="btn btn-success" id="upload">Upload <i class="glyphicon glyphicon-upload"></i></button>
         </div>
     </div>
 
@@ -31,6 +31,14 @@
 
 <p>To use the template sheet, remove all rows except the header row, and then fill in the content as required.</p>
 
+<h2>Creating Scores</h2>
+
+<p>Any ISSN/E-ISSN which does not match an existing score in the system will cause a new one to be created from the upload.</p>
+
+<h2>Updating Scores</h2>
+
+<p>Any ISSN/E-ISSN which match an existing score will cause the current score to be updated with the new one from the upload.</p>
+
 <h2>Deleting Scores</h2>
 
 <p>To delete a score, provide the ISSN and/or E-ISSN in the CSV, and leave all the other information blank.
@@ -39,5 +47,5 @@
 
 
 {% block extra_js_bottom %}
-
+<script type="text/javascript" src="{{ url_for('static', filename='js/upload.js') }}"></script>
 {% endblock%}
