fix bug with sub-score sorting, display sub-score being sorted by in results, and sort out layout when scaling across different viewport sizes

--- a/service/static/css/service.css
+++ b/service/static/css/service.css
@@ -90,6 +90,16 @@
     color: #988E93;
 }
 
+.subscore {
+    font-size: 80%;
+    margin-top: 15px;
+}
+
+.subscore .subscore-number {
+    font-weight: bold;
+    font-size: 150%;
+}
+
 #publicsearch .facetview_filters {
     border-left: 3px solid #c7d9e2;
     padding-left: 10px;
