move csv link to api page and rename/reword

--- a/service/templates/api.html
+++ b/service/templates/api.html
@@ -2,7 +2,11 @@
 
 {% block content %}
 
-<h1>API</h1>
+<h2>Full Data Download</h2>
+
+<p>A <a href="{{ url_for('csv') }}">full CSV</a> of the Open Access Spectrum Evaluation Tool's scores is available.</p>
+
+<h2>API</h2>
 
 <p>OA Spectrum provides a REST API for search and access to scores.</p>
 
