--- a/service/templates/header.html
+++ b/service/templates/header.html
@@ -23,7 +23,7 @@
                     <li><a href="/faq">FAQ</a></li>
                     <li><a href="#">Sponsors/Supporters</a></li>
                     <li><a href="/resources">Related Resources</a></li>
-                    <li{% if request.path.startswith("/api") %} class="active"{% endif %}><a href="/api">API</a></li>
+                    <li{% if request.path.startswith("/api") %} class="active"{% endif %}><a href="/api">The Data</a></li>
                 </ul>
 
                 {% if not current_user.is_anonymous() %}
