--- a/service/templates/header.html
+++ b/service/templates/header.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="main-navigation">
                 <ul class="nav navbar-nav">
                     <li{% if request.path == "/" %} class="active"{% endif %}><a href="{{url_for('index')}}">Scores</a></li>
-                    <li><a href="/faq">FAQ</a></li>
+                    <li{% if request.path == url_for('faq') %} class="active"{% endif %}><a href="{{url_for('faq')}}">FAQ</a></li>
                     <li><a href="#">Sponsors/Supporters</a></li>
                     <li><a href="/resources">Related Resources</a></li>
                     <li{% if request.path.startswith("/api") %} class="active"{% endif %}><a href="/api">The Data</a></li>
