--- a/service/templates/header.html
+++ b/service/templates/header.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="content" id="topstrap">
-        <a href="/">Open Access Spectrum Evaluation Tool</a>
+        <!--<a href="/">Open Access Spectrum Evaluation Tool</a>-->
     </div>
 
     <nav class="navbar navbar-default" id="oas-nav">
